# glassdoor-jobs-ai-skills

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  THESIS.docx  THESIS.md  Thesis.doc  analysis.py  audit_dictionary_embeddings.py  audit_extracted_skills_embeddings.py  audit_unique_skills.py  check_pairs.py  config.py  data_io.py  extract50csv.py  extract_csv.py  generate_hardskills_frequency.py  generate_qa_report.py  llm_quality_report_cz.md  main.py  models.py  openai_analyzer.py  pipeline.py  prompts.py  pyproject.toml  render.yaml  reproduce_issue.py  requirements.txt  show_csv.py  skill_processing.py  us_relevant_50.csv  us_relevant_ai.csv  verify_extraction.py  verify_reprocessed_duplicates.py
ai_skills/: chart_generator.py  checkpoint_manager.py  cli.py  clustering.py  config.py  data_io.py  deterministic_extractor.py  education_extractor.py  embeddings.py  evaluator.py  models.py  openai_analyzer.py  pipeline.py  prompts.py  server.py  settings_loader.py  skill_normalizer.py  skill_processing.py  skills_dictionary.py  vector_store.py
config/: settings.local.example.toml  settings.toml
data/: skills_embeddings.json
other/: 03_metodika.docx  05_systemizace.docx  llm_quality_report.md  osnova_diplomove_prace.md
scripts/: precompute_embeddings.py
src/: __init__.py  ai_skills.py  config.py  config_settings.py  data_io.py  extract_csv.py  models.py  openai_analyzer.py  pipeline.py  prompts.py  skill_processing.py
tests/: test_evaluator.py  test_openai_analyzer.py  test_skill_normalizer.py  test_vector_features.py
web/: package-lock.json  (+1 more)
(+12 files in other folders)
