[project]
name = "ai-skills"
version = "0.1.0"
description = "AI Skills Analysis Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
