[project]
name = "ai-skills"
version = "0.1.0"
description = "AI Skills Analysis Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.1",
    "chromadb>=1.4.0",
    "sentence-transformers>=5.2.0",
    "scikit-learn>=1.7.2",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
